--- a/index.html
+++ b/index.html
@@ -141,6 +141,16 @@
             }
         }
     </style>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WENYHWVPJC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-WENYHWVPJC');
+    </script>
 </head>
 <body class="bg-apple-bg text-apple-dark-bg font-apple">
     <header class="bg-white shadow-sm sticky top-0 z-40">
